优化GC打印模式防止GC日志过大影响性能